--- a/index.html
+++ b/index.html
@@ -3,24 +3,154 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="styles/normalize.css" rel="stylesheet">
+  <link href="styles/style.css" rel="stylesheet">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
-
+      <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="логотип Яндекс Практикум">
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link main-link" href="#">Узнать</a></p>
+      <img class="header__main-illustration" src="./images/header-image.png " alt="картинка с мальчиком">
+      <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
+        <div class="two-columns">
+          <div class="two-columns__brief">
+            <h2 class="two-columns__brief_title">Главные проблемы в обучении</h2>
+          </div>
+          <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты.
+                 Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
+              </p>
+              <p class="two-columns__paragraph two-columns__paragraph_padding-top"><b>Вывод:</b> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+             </p>
+             <p class="two-columns__paragraph two-columns__paragraph_padding-top"> Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим.
+               Эти же техники применяются на примере обучения в Практикуме.
+             </p>
+          </div>
+        </div>
       </section>
 
       <section class="digits">
+        <div class="section-title">
+          <h2 class="section-title__property">Цифры и факты</h2>
+        </div>
+        <div class="section-subtitle">
+          <h3 class="section-subtitle__property">Про учёбу и мозг</h3>
+        </div>
+
+        <ul class="table">
+          <li>
+            <ul class="table_flex">
+              <li class="table__cell">
+                <h3 class="table__heading">86 милиардов</h3>
+                <p class="table__text">Число нейронов в мозге человека</p>
+              </li>
+              <li class="table__cell">
+                <h3 class="table__heading">2.1 милиарда</h3>
+                <p class="table__text">Число нуждающихся в повышении квалификации</p>
+                <p class="table__text">Всемирный банк, 2017</p>
+              </li>
+              <li class="table__cell">
+                <h3 class="table__heading">1000 терабайт</h3>
+                <p class="table__text">Объем памяти человека</p>
+              </li>
+              <li class="table__cell">
+                <h3 class="table__heading">500 триллионов</h3>
+                <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+              </li>
+            </ul>
+
+          </li>
+          <li>
+            <ul class="table_flex">
+              <li class="table__cell">
+                <h3 class="table__heading">420 миллионов</h3>
+                <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+                <p class="table__text">Всемирный банк, 2017</p>
+              </li>
+              <li class="table__cell">
+                <h3 class="table__heading">17–20 лет</h3>
+                <p class="table__text">Пик обучаемости</p>
+              </li>
+              <li class="table__cell">
+                <h3 class="table__heading">1885 год</h3>
+                <p class="table__text">Открытие кривой забывания</p>
+              </li>
+              <li class="table__cell">
+                <h3 class="table__heading">1889 год</h3>
+                <p class="table__text">Открытие условного рефлекса</p>
+              </li>
+            </ul>
+
+          </li>
+        </ul>
       </section>
 
       <section class="feynman">
+        <h2 class="feynman__title">Метод Феймана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть</h3>
+        <a class="feynman__link main-link" href="#">Подробнее</a>
       </section>
 
       <section class="kaufman">
+        <div class="section-title">
+          <h2 class="section-title__property">Принципы обучения</h2>
+        </div>
+        <div class="section-subtitle">
+          <h3 class="section-subtitle__property">Про учёбу и мозг</h3>
+        </div>
+
+        <ul class="table">
+          <li>
+            <ul class="table_flex">
+              <li class="table__cell">
+                <h3 class="table__heading">86 милиардов</h3>
+                <p class="table__text">Число нейронов в мозге человека</p>
+              </li>
+              <li class="table__cell">
+                <h3 class="table__heading">2.1 милиарда</h3>
+                <p class="table__text">Число нуждающихся в повышении квалификации</p>
+                <p class="table__text">Всемирный банк, 2017</p>
+              </li>
+              <li class="table__cell">
+                <h3 class="table__heading">1000 терабайт</h3>
+                <p class="table__text">Объем памяти человека</p>
+              </li>
+              <li class="table__cell">
+                <h3 class="table__heading">500 триллионов</h3>
+                <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+              </li>
+            </ul>
+
+          </li>
+          <li>
+            <ul class="table_flex">
+              <li class="table__cell">
+                <h3 class="table__heading">420 миллионов</h3>
+                <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+                <p class="table__text">Всемирный банк, 2017</p>
+              </li>
+              <li class="table__cell">
+                <h3 class="table__heading">17–20 лет</h3>
+                <p class="table__text">Пик обучаемости</p>
+              </li>
+              <li class="table__cell">
+                <h3 class="table__heading">1885 год</h3>
+                <p class="table__text">Открытие кривой забывания</p>
+              </li>
+              <li class="table__cell">
+                <h3 class="table__heading">1889 год</h3>
+                <p class="table__text">Открытие условного рефлекса</p>
+              </li>
+            </ul>
+
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer">
