--- a/index.html
+++ b/index.html
@@ -36,12 +36,8 @@
       </section>
 
       <section class="digits">
-        <div class="section-title">
-          <h2 class="section-title__property">Цифры и факты</h2>
-        </div>
-        <div class="section-subtitle">
-          <h3 class="section-subtitle__property">Про учёбу и мозг</h3>
-        </div>
+          <h2 class="section-title">Цифры и факты</h2>
+          <h3 class="section-subtitle">Про учёбу и мозг</h3>
 
         <ul class="table">
           <li>
@@ -98,63 +94,94 @@
       </section>
 
       <section class="kaufman">
-        <div class="section-title">
-          <h2 class="section-title__property">Принципы обучения</h2>
-        </div>
-        <div class="section-subtitle">
-          <h3 class="section-subtitle__property">Про учёбу и мозг</h3>
-        </div>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
 
-        <ul class="table">
+        <ul class="table table_theme_dark">
           <li>
-            <ul class="table_flex">
-              <li class="table__cell">
-                <h3 class="table__heading">86 милиардов</h3>
-                <p class="table__text">Число нейронов в мозге человека</p>
+            <ul class="table_flex_dark">
+              <li class="table__cell table__cell_theme_dark">
+                <h3 class="table__heading">1</h3>
+                <p class="table__text">Выберите привлекательный проект.</p>
               </li>
-              <li class="table__cell">
-                <h3 class="table__heading">2.1 милиарда</h3>
-                <p class="table__text">Число нуждающихся в повышении квалификации</p>
-                <p class="table__text">Всемирный банк, 2017</p>
+              <li class="table__cell table__cell_theme_dark">
+                <h3 class="table__heading">2</h3>
+                <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
               </li>
-              <li class="table__cell">
-                <h3 class="table__heading">1000 терабайт</h3>
-                <p class="table__text">Объем памяти человека</p>
+              <li class="table__cell table__cell_theme_dark">
+                <h3 class="table__heading">3</h3>
+                <p class="table__text">Определите целевой уровень мастерства.</p>
               </li>
-              <li class="table__cell">
-                <h3 class="table__heading">500 триллионов</h3>
-                <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+              <li class="table__cell table__cell_theme_dark">
+                <h3 class="table__heading">4</h3>
+                <p class="table__text">Разбейте навык на элементы.</p>
+              </li>
+              <li class="table__cell table__cell_theme_dark">
+                <h3 class="table__heading">5</h3>
+                <p class="table__text">Приготовьте всё необходимое для занятий.</p>
               </li>
             </ul>
-
           </li>
           <li>
-            <ul class="table_flex">
-              <li class="table__cell">
-                <h3 class="table__heading">420 миллионов</h3>
-                <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-                <p class="table__text">Всемирный банк, 2017</p>
+            <ul class="table_flex_dark">
+              <li class="table__cell table__cell_theme_dark">
+                <h3 class="table__heading">6</h3>
+                <p class="table__text">Устраните препятствия для занятий.</p>
               </li>
-              <li class="table__cell">
-                <h3 class="table__heading">17–20 лет</h3>
-                <p class="table__text">Пик обучаемости</p>
+              <li class="table__cell table__cell_theme_dark">
+                <h3 class="table__heading">7</h3>
+                <p class="table__text">Выделите специальное время для занятий.</p>
               </li>
-              <li class="table__cell">
-                <h3 class="table__heading">1885 год</h3>
-                <p class="table__text">Открытие кривой забывания</p>
+              <li class="table__cell table__cell_theme_dark">
+                <h3 class="table__heading">8</h3>
+                <p class="table__text">Создайте быстрые петли обратной связи.</p>
               </li>
-              <li class="table__cell">
-                <h3 class="table__heading">1889 год</h3>
-                <p class="table__text">Открытие условного рефлекса</p>
+              <li class="table__cell table__cell_theme_dark">
+                <h3 class="table__heading">9</h3>
+                <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+              </li>
+              <li class="table__cell table__cell_theme_dark">
+                <h3 class="table__heading">10</h3>
+                <p class="table__text">Уделяйте внимание количеству и скорости.</p>
               </li>
             </ul>
-
           </li>
         </ul>
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__columns_content_copyright">
+          <img class="logo_place_footer" src="./images/logo_place_footer.svg" alt="логотип Яндекс Практикум">
+          <p class="footer__autor">&copy;2021.Евгений Манин</p>
+        </div>
+        <div class="footer__columns_content_info">
+          <div class="footer__column-heading">О практикуме</div>
+          <div class="footer__column-links">
+            <a class="footer__column-link" href="#">Главная</a>
+            <a class="footer__column-link" href="#">Концепция</a>
+            <a class="footer__column-link" href="#">Наставники</a>
+          </div>
+        </div>
+        <div class="footer__columns_content_social">
+          <div class="footer__column-heading">Соцсети</div>
+            <a class="footer__column-link " href="#">
+              <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="иконка Facebook">
+              <span class="footer__column-text">Facebook</span>
+            </a>
 
+            <a class="footer__column-link " href="#">
+              <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="иконка ВКонтакте">
+              <span class="footer__column-text">ВКонтакте</span>
+            </a>
+
+            <a class="footer__column-link footer__column-link_padding-bottom" href="#">
+              <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="иконка Instagram">
+              <span class="footer__column-text">Instagram</span>
+            </a>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
