--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,14 @@
   <link href="styles/style.css" rel="stylesheet">
   <title>Научиться учиться</title>
 </head>
+
 <body>
   <div class="page">
     <header class="header">
       <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="логотип Яндекс Практикум">
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link main-link" href="#">Узнать</a></p>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
+        жизни? <a class="header__link main-link" href="#">Узнать</a></p>
       <img class="header__main-illustration" src="./images/header-image.png " alt="картинка с мальчиком">
       <div class="header__square-pic"></div>
     </header>
@@ -23,66 +26,63 @@
             <h2 class="two-columns__brief_title">Главные проблемы в обучении</h2>
           </div>
           <div class="two-columns__main-text">
-              <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты.
-                 Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
-              </p>
-              <p class="two-columns__paragraph two-columns__paragraph_padding-top"><b>Вывод:</b> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
-             </p>
-             <p class="two-columns__paragraph two-columns__paragraph_padding-top"> Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим.
-               Эти же техники применяются на примере обучения в Практикуме.
-             </p>
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
+              материал. Мы готовимся к экзаменам и учим билеты.
+              Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам
+              реального знания. Зубрежка быстро выветривается и не приносит пользы.
+            </p>
+            <p class="two-columns__paragraph"><b>Вывод:</b> учиться тоже нужно уметь,
+              но почему-то этому мало где учат. Что с этим делать?
+            </p>
+            <p class="two-columns__paragraph"> Конкретные техники и упражнения
+              помогают изменить подход к обучению, сделать его эффективным и захватывающим.
+              Эти же техники применяются на примере обучения в Практикуме.
+            </p>
           </div>
         </div>
       </section>
 
       <section class="digits">
-          <h2 class="section-title">Цифры и факты</h2>
-          <h3 class="section-subtitle">Про учёбу и мозг</h3>
+        <h2 class="section-title">Цифры и факты</h2>
+        <h3 class="section-subtitle">Про учёбу и мозг</h3>
 
         <ul class="table">
-          <li>
-            <ul class="table_flex">
-              <li class="table__cell">
-                <h3 class="table__heading">86 милиардов</h3>
-                <p class="table__text">Число нейронов в мозге человека</p>
-              </li>
-              <li class="table__cell">
-                <h3 class="table__heading">2.1 милиарда</h3>
-                <p class="table__text">Число нуждающихся в повышении квалификации</p>
-                <p class="table__text">Всемирный банк, 2017</p>
-              </li>
-              <li class="table__cell">
-                <h3 class="table__heading">1000 терабайт</h3>
-                <p class="table__text">Объем памяти человека</p>
-              </li>
-              <li class="table__cell">
-                <h3 class="table__heading">500 триллионов</h3>
-                <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
-              </li>
-            </ul>
-
+          <li class="table__cell">
+            <h3 class="table__heading">86 милиардов</h3>
+            <p class="table__text">Число нейронов в мозге человека</p>
           </li>
-          <li>
-            <ul class="table_flex">
-              <li class="table__cell">
-                <h3 class="table__heading">420 миллионов</h3>
-                <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-                <p class="table__text">Всемирный банк, 2017</p>
-              </li>
-              <li class="table__cell">
-                <h3 class="table__heading">17–20 лет</h3>
-                <p class="table__text">Пик обучаемости</p>
-              </li>
-              <li class="table__cell">
-                <h3 class="table__heading">1885 год</h3>
-                <p class="table__text">Открытие кривой забывания</p>
-              </li>
-              <li class="table__cell">
-                <h3 class="table__heading">1889 год</h3>
-                <p class="table__text">Открытие условного рефлекса</p>
-              </li>
-            </ul>
+          <li class="table__cell">
+            <h3 class="table__heading">2.1 милиарда</h3>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1000 терабайт</h3>
+            <p class="table__text">Объем памяти человека</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">500 триллионов</h3>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </li>
 
+
+          <li class="table__cell">
+            <h3 class="table__heading">420 миллионов</h3>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
+            </p>
+            <p class="table__text">Всемирный банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">17–20 лет</h3>
+            <p class="table__text">Пик обучаемости</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1885 год</h3>
+            <p class="table__text">Открытие кривой забывания</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1889 год</h3>
+            <p class="table__text">Открытие условного рефлекса</p>
           </li>
         </ul>
       </section>
@@ -98,53 +98,47 @@
         <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
 
         <ul class="table table_theme_dark">
-          <li>
-            <ul class="table_flex_dark">
-              <li class="table__cell table__cell_theme_dark">
-                <h3 class="table__heading">1</h3>
-                <p class="table__text">Выберите привлекательный проект.</p>
-              </li>
-              <li class="table__cell table__cell_theme_dark">
-                <h3 class="table__heading">2</h3>
-                <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
-              </li>
-              <li class="table__cell table__cell_theme_dark">
-                <h3 class="table__heading">3</h3>
-                <p class="table__text">Определите целевой уровень мастерства.</p>
-              </li>
-              <li class="table__cell table__cell_theme_dark">
-                <h3 class="table__heading">4</h3>
-                <p class="table__text">Разбейте навык на элементы.</p>
-              </li>
-              <li class="table__cell table__cell_theme_dark">
-                <h3 class="table__heading">5</h3>
-                <p class="table__text">Приготовьте всё необходимое для занятий.</p>
-              </li>
-            </ul>
+
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">1</h3>
+            <p class="table__text">Выберите привлекательный проект.</p>
           </li>
-          <li>
-            <ul class="table_flex_dark">
-              <li class="table__cell table__cell_theme_dark">
-                <h3 class="table__heading">6</h3>
-                <p class="table__text">Устраните препятствия для занятий.</p>
-              </li>
-              <li class="table__cell table__cell_theme_dark">
-                <h3 class="table__heading">7</h3>
-                <p class="table__text">Выделите специальное время для занятий.</p>
-              </li>
-              <li class="table__cell table__cell_theme_dark">
-                <h3 class="table__heading">8</h3>
-                <p class="table__text">Создайте быстрые петли обратной связи.</p>
-              </li>
-              <li class="table__cell table__cell_theme_dark">
-                <h3 class="table__heading">9</h3>
-                <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
-              </li>
-              <li class="table__cell table__cell_theme_dark">
-                <h3 class="table__heading">10</h3>
-                <p class="table__text">Уделяйте внимание количеству и скорости.</p>
-              </li>
-            </ul>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">2</h3>
+            <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">3</h3>
+            <p class="table__text">Определите целевой уровень мастерства.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">4</h3>
+            <p class="table__text">Разбейте навык на элементы.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">5</h3>
+            <p class="table__text">Приготовьте всё необходимое для занятий.</p>
+          </li>
+
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">6</h3>
+            <p class="table__text">Устраните препятствия для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">7</h3>
+            <p class="table__text">Выделите специальное время для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">8</h3>
+            <p class="table__text">Создайте быстрые петли обратной связи.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">9</h3>
+            <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading">10</h3>
+            <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
         <div class="kaufman__triangle"></div>
@@ -152,11 +146,11 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__columns_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <img class="logo_place_footer" src="./images/logo_place_footer.svg" alt="логотип Яндекс Практикум">
           <p class="footer__autor">&copy;2021.Евгений Манин</p>
         </div>
-        <div class="footer__columns_content_info">
+        <div class="footer__column footer__column_content_info">
           <div class="footer__column-heading">О практикуме</div>
           <div class="footer__column-links">
             <a class="footer__column-link" href="#">Главная</a>
@@ -164,25 +158,26 @@
             <a class="footer__column-link" href="#">Наставники</a>
           </div>
         </div>
-        <div class="footer__columns_content_social">
+        <div class="footer__column footer__column_content_social">
           <div class="footer__column-heading">Соцсети</div>
-            <a class="footer__column-link " href="#">
-              <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="иконка Facebook">
-              <span class="footer__column-text">Facebook</span>
-            </a>
+          <a class="footer__column-link " href="#">
+            <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="иконка Facebook">
+            <span class="footer__column-text">Facebook</span>
+          </a>
 
-            <a class="footer__column-link " href="#">
-              <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="иконка ВКонтакте">
-              <span class="footer__column-text">ВКонтакте</span>
-            </a>
+          <a class="footer__column-link " href="#">
+            <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="иконка ВКонтакте">
+            <span class="footer__column-text">ВКонтакте</span>
+          </a>
 
-            <a class="footer__column-link footer__column-link_padding-bottom" href="#">
-              <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="иконка Instagram">
-              <span class="footer__column-text">Instagram</span>
-            </a>
+          <a class="footer__column-link" href="#">
+            <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="иконка Instagram">
+            <span class="footer__column-text">Instagram</span>
+          </a>
         </div>
       </div>
     </footer>
   </div>
 </body>
+
 </html>
