--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <h2 class="two-columns__brief two-columns__brief_title">Главные проблемы в обучении</h2>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
               материал. Мы готовимся к экзаменам и учим билеты.
