Создание файловой структуры CSS по БЭМ

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="styles/normalize.css" rel="stylesheet">
-  <link href="styles/style.css" rel="stylesheet">
+  <link href="pages/index.css" rel="stylesheet">
   <title>Научиться учиться</title>
 </head>
 
@@ -15,7 +14,7 @@
       <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="логотип Яндекс Практикум">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
-        жизни? <a class="header__link main-link" href="#">Узнать</a></p>
+        жизни? <a class="header__link header__link_feature" href="#">Узнать</a></p>
       <img class="header__main-illustration" src="./images/header-image.png " alt="картинка с мальчиком">
       <div class="header__square-pic"></div>
     </header>
@@ -40,7 +39,9 @@
           </div>
         </div>
       </section>
+      <section class="techniques">
 
+      </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учёбу и мозг</p>
@@ -89,7 +90,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Феймана</h2>
         <p class="feynman__subtitle">Выучить и не забыть</p>
-        <a class="feynman__link main-link" href="#">Подробнее</a>
+        <a class="feynman__link feynman__link_feature" href="#">Подробнее</a>
       </section>
 
       <section class="kaufman">
