--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
       <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="логотип Яндекс Практикум">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
-        жизни? <a class="header__link header__link_feature" href="#">Узнать</a></p>
+        жизни? <a class="header__link main-link" href="#">Узнать</a></p>
       <img class="header__main-illustration" src="./images/header-image.png " alt="картинка с мальчиком">
       <div class="header__square-pic rotation square-pic__rotation"></div>
     </header>
     <main class="content">
-      <section class="description">
+      <!-- так как padding-top: 100px повторяется во многих блоках, я сделал отдельный блок padding-top-100 и применил его в разных блоках.
+        Но можно было сделать в каждом блоке модификатор, но это на мой взгляд не эффективно  -->
+      <section class="description padding-top-100">
         <div class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
@@ -39,52 +41,91 @@
           </div>
         </div>
       </section>
-      <section class="techniques techniques_padding_top">
+      <section class="techniques padding-top-100">
         <h2 class="section-title">Техники обучения</h2>
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <div class="cards">
           <div class="cards__item">
             <img class="cards__image cards__image_padding" src="./images/cards-attention.png" alt="картинка с книгой">
             <h4 class="cards__title cards__title_indent">Два вида внимания</h4>
-            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
+              мышление.</p>
           </div>
 
           <div class="cards__item">
-            <img class="cards__image cards__image_padding" src="./images/cards-recall.png" alt="картинка со статуей мальчика">
+            <img class="cards__image cards__image_padding" src="./images/cards-recall.png"
+              alt="картинка со статуей мальчика">
             <h4 class="cards__title cards__title_indent">Recall</h4>
             <p class="cards__description">Вспоминайте изученное – это позволит соединить разрозненные порции памяти.</p>
           </div>
 
           <div class="cards__item">
-            <img class="cards__image cards__image_padding" src="./images/cards-interliving.png" alt="картинка со сценой">
+            <img class="cards__image cards__image_padding" src="./images/cards-interliving.png"
+              alt="картинка со сценой">
             <h4 class="cards__title cards__title_indent">Интерливинг</h4>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогощают друг друга.</p>
           </div>
 
           <div class="cards__item">
-            <img class="cards__image cards__image_padding" src="./images/cards-question.png" alt="картинка с помещением">
+            <img class="cards__image cards__image_padding" src="./images/cards-question.png"
+              alt="картинка с помещением">
             <h4 class="cards__title cards__title_indent">Вопросы</h4>
-            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
+              волнует.</p>
           </div>
 
           <div class="cards__item">
             <img class="cards__image cards__image_padding" src="./images/cards-competence.png" alt="картинка с книгами">
             <h4 class="cards__title cards__title_indent">Иллюзия компетентности</h4>
-            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
+              владеете новой темой.</p>
           </div>
         </div>
       </section>
 
-      <section class="feynman">
+      <section class="video padding-top-100">
+        <h2 class="section-title">Видео на TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="iframe-wrap iframe-wrap_padding_top video__iframe-wrap">
+          <!-- обертка - чтобы можно было сместить вниз iframe -->
+          <iframe class="video__iframe video__iframe_padding_right" width="515" height="316"
+            src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY"
+            title="YouTube video player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+        </div>
+      </section>
+
+      <section class="oakley oakley_padding_top">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным
+              гуманитарием,
+              причем далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно,
+              что её выдвинули в командиры.
+              Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным
+              наукам. Оказалось, если вам
+              что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого
+              взгляда.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="feynman padding-top-100">
         <h2 class="feynman__title">Метод Феймана</h2>
         <p class="feynman__subtitle">Выучить и не забыть</p>
-        <a class="feynman__link feynman__link_feature" href="#">Подробнее</a>
+        <a class="feynman__link main-link" href="#">Подробнее</a>
       </section>
-      <section class="digits">
+      <section class="digits padding-top-100">
         <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учёбу и мозг</p>
 
-        <ul class="table">
+        <ul class="table table_padding_bottom">
           <li class="table__cell">
             <h3 class="table__heading">86 милиардов</h3>
             <p class="table__text">Число нейронов в мозге человека</p>
@@ -123,6 +164,28 @@
             <p class="table__text">Открытие условного рефлекса</p>
           </li>
         </ul>
+      </section>
+      <section class="khan">
+        <div class="khan__container khan__container_indent">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир – школа</h2>
+          <p class="khan__quote khan__quote_padding">Страсть и новаторство Сала Хана меняют процесс обучения миллиона
+            студентов по всему миру. Книгу «Весь мир – школа»
+            нужно прочитать всем, кто занимается образованием – так учащиеся повсюду смогут получить навыки и знания,
+            которые приносят успех в школе, карьере и жизни.
+          </p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline khan__quote-author-subline_padding_top">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container khan__book-container_padding_top">
+            <div class="khan__book-pic">
+              <img src="./images/khan-book.jpg" alt="картинка обложки книги">
+            </div>
+            <!-- обертка - чтобы ссылка работала правильно, только при наведении на ссылку -->
+            <div>
+              <a class="khan__buy-link main-link khan__buy-link_padding_left" href="#">Купить книгу</a>
+            </div>
+          </div>
+        </div>
       </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
@@ -172,7 +235,21 @@
             <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation triangle__rotation"></div>
+      </section>
+      <section class="resources padding-top-100">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обочения</p>
+        <div class="resources__logo-zone resources__logo-zone_indent">
+          <a class="main-link" href="#"><img class="resources__logo" src="./images/logo/resources-arzamas.svg"
+              alt="logo-arzamas"></a>
+          <a class="main-link" href="#"><img class="resources__logo" src="./images/logo/resources-n1.svg"
+              alt="logo-n1"></a>
+          <a class="main-link" href="#"><img class="resources__logo" src="./images/logo/resources-strelka.svg"
+              alt="logo-strelka"></a>
+          <a class="main-link" href="#"><img class="resources__logo" src="./images/logo/resources-polka.svg"
+              alt="logo--polka"></a>
+        </div>
       </section>
     </main>
     <footer class="footer">
