--- a/index.html
+++ b/index.html
@@ -242,13 +242,13 @@
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обочения</p>
         <div class="resources__logo-zone resources__logo-zone_indent">
           <a class="main-link" href="#"><img class="resources__logo" src="./images/logo/resources-arzamas.svg"
-              alt="logo-arzamas"></a>
+              alt="картинка логотипа arzamas"></a>
           <a class="main-link" href="#"><img class="resources__logo" src="./images/logo/resources-n1.svg"
-              alt="logo-n1"></a>
+              alt="картинка логотипа n1"></a>
           <a class="main-link" href="#"><img class="resources__logo" src="./images/logo/resources-strelka.svg"
-              alt="logo-strelka"></a>
+              alt="картинка логотипа strelka"></a>
           <a class="main-link" href="#"><img class="resources__logo" src="./images/logo/resources-polka.svg"
-              alt="logo--polka"></a>
+              alt="картинка логотипа polka"></a>
         </div>
       </section>
     </main>
