Изменение микса rotation

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
         жизни? <a class="header__link main-link" href="#">Узнать</a></p>
       <img class="header__main-illustration" src="./images/header-image.png " alt="картинка с мальчиком">
-      <div class="header__square-pic rotation square-pic__rotation"></div>
+      <div class="header__square-pic rotation rotation__header"></div>
     </header>
     <main class="content">
       <!-- так как padding-top: 100px повторяется во многих блоках, я сделал отдельный блок padding-top-100 и применил его в разных блоках.
@@ -235,7 +235,7 @@
             <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle rotation triangle__rotation"></div>
+        <div class="kaufman__triangle rotation rotation__kaufman"></div>
       </section>
       <section class="resources padding-top-100">
         <h2 class="section-title">Полезные ресурсы</h2>
