--- a/index.html
+++ b/index.html
@@ -50,36 +50,33 @@
             <h4 class="cards__title">Два вида внимания</h4>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
               мышление.</p>
-            </li>
+          </li>
 
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-recall.png"
-              alt="задумчивая статуя мальчика.">
+            <img class="cards__image" src="./images/cards-recall.png" alt="задумчивая статуя мальчика.">
             <h4 class="cards__title">Recall</h4>
             <p class="cards__description">Вспоминайте изученное – это позволит соединить разрозненные порции памяти.</p>
           </li>
 
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-interliving.png"
-              alt="Сцена с людьми.">
+            <img class="cards__image" src="./images/cards-interliving.png" alt="Сцена с людьми.">
             <h4 class="cards__title">Интерливинг</h4>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогощают друг друга.</p>
           </li>
 
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-question.png"
-              alt="белое помещение с высокими стенами.">
+            <img class="cards__image" src="./images/cards-question.png" alt="белое помещение с высокими стенами.">
             <h4 class="cards__title">Вопросы</h4>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
               волнует.</p>
-            </li>
+          </li>
 
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-competence.png" alt="рука держит несколько книг.">
             <h4 class="cards__title">Иллюзия компетентности</h4>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
               владеете новой темой.</p>
-            </li>
+          </li>
         </ul>
       </section>
 
@@ -91,8 +88,7 @@
           <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
-          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY"
-            title="YouTube video player"
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
         </div>
@@ -179,7 +175,7 @@
             <div class="khan__book-pic">
               <img src="./images/khan-book.jpg" alt="картинка обложки книги">
             </div>
-              <a class="khan__buy-link main-link" href="#">Купить книгу</a>
+            <a class="khan__buy-link main-link" href="#">Купить книгу</a>
           </div>
         </div>
       </section>
