--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <section class="video padding-top-100">
         <h2 class="section-title">Видео на TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
-        <div class="iframe-wrap video__iframe-wrap">
+        <div class="iframe-wrap">
           <!-- обертка - чтобы можно было сместить вниз iframe -->
           <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
