--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
           <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="логотип Яндекс Практикум">
-          <p class="footer__autor">&copy;2021.Евгений Манин</p>
+          <p class="footer__author">&copy;2021.Евгений Манин</p>
         </div>
         <nav class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">О практикуме</h2>
